assets/css/main.css
/* ... */
@media screen and (max-width: 736px) {
  #header nav > ul > li > a.menuToggle {
    padding: 0 1.5em;
  }

  #header nav > ul > li > a.menuToggle span {
    display: none;
  }
}

@media screen and (max-width: 736px) {
  #header nav > ul > li > a {
    padding: 0 0 0 1.5em;
  }
}

#header nav > ul > li:first-child {
  margin-left: 0;
}

#header.alt {
  background: transparent;
}

#header.alt h1 {
  pointer-events: none;
  opacity: 0;
}

/* Banner */

#banner {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  -moz-flex-direction: column;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -moz-justify-content: center;
  -webkit-justify-content: center;
  -ms-justify-content: center;
  justify-content: center;
  cursor: default;
  height: 100vh;
  min-height: 35em;
  overflow: hidden;
  position: relative;
  text-align: center;
  background-image: url("../../images/millenium_cosmic_web_springel.webp");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  width: 98.9vw; /* Had to change to this to get it to work!! */
  min-width: 1em;
  z-index: 0;
}

#banner h2 {
  -moz-transform: scale(1);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -moz-transition:
    -moz-transform 0.5s ease,
    opacity 0.5s ease;
  -webkit-transition:
    -webkit-transform 0.5s ease,
    opacity 0.5s ease;
  -ms-transition:
    -ms-transform 0.5s ease,
    opacity 0.5s ease;
  transition:
    transform 0.5s ease,
    opacity 0.5s ease;
  display: inline-block;
  font-size: 1.75em;
  opacity: 1;
  padding: 0.35em 1em;
  position: relative;
  z-index: 1;
}

#banner .banner-logo {
  display: block;
  margin: 0 auto 1.5em auto;
  height: 14.25em;
  width: auto;
  max-width: min(80vw, 28em);
  position: relative;
  z-index: 1;
}

#banner h2:before,
#banner h2:after {
  -moz-transition: width 0.85s ease;
  -webkit-transition: width 0.85s ease;
  -ms-transition: width 0.85s ease;
  transition: width 0.85s ease;
  -moz-transition-delay: 0.25s;
  -webkit-transition-delay: 0.25s;
  -ms-transition-delay: 0.25s;
  transition-delay: 0.25s;
  background: #fff;
  content: "";
  display: block;
  height: 2px;
  position: absolute;
  width: 100%;
}

#banner h2:before {
  top: 0;
  left: 0;
}

#banner h2:after {
  bottom: 0;
  right: 0;
}

#banner p {
  letter-spacing: 0.225em;
  text-transform: uppercase;
}

#banner p a {
  color: inherit;
}

#banner .more {
  -moz-transition:
    -moz-transform 0.75s ease,
    opacity 0.75s ease;
  -webkit-transition:
    -webkit-transform 0.75s ease,
    opacity 0.75s ease;
  -ms-transition:
    -ms-transform 0.75s ease,
    opacity 0.75s ease;
  transition:
    transform 0.75s ease,
    opacity 0.75s ease;
  -moz-transition-delay: 3.5s;
  -webkit-transition-delay: 3.5s;
  -ms-transition-delay: 3.5s;
  transition-delay: 3.5s;
  -moz-transform: translateY(0);
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  border: none;
  bottom: 0;
  color: inherit;
  font-size: 0.8em;
  height: 8.5em;
  left: 50%;
  letter-spacing: 0.225em;
  margin-left: -8.5em;
  opacity: 1;
  outline: 0;
  padding-left: 0.225em;
  position: absolute;
  text-align: center;
  text-transform: uppercase;
  width: 16em;
  z-index: 1;
}

#banner .more:after {
  background-image: url("images/arrow.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  bottom: 4em;
  content: "";
  display: block;
  height: 1.5em;
  left: 50%;
  margin: 0 0 0 -0.75em;
  position: absolute;
  width: 1.5em;
}

#banner:after {
  pointer-events: none;
  -moz-transition: opacity 3s ease-in-out;
  -webkit-transition: opacity 3s ease-in-out;
  -ms-transition: opacity 3s ease-in-out;
  transition: opacity 3s ease-in-out;
  -moz-transition-delay: 1.25s;
  -webkit-transition-delay: 1.25s;
  -ms-transition-delay: 1.25s;
  transition-delay: 1.25s;
  content: "";
  background: #2e3842;
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  opacity: 0;
}

@media screen and (max-width: 736px) {
  #banner {
    padding: 7em 3em 5em 3em;
    height: auto;
    min-height: 0;
  }

  #banner h2 {
    font-size: 1.25em;
  }

  #banner .banner-logo {
    height: 10em;
    margin-bottom: 1em;
  }

  #banner br {
    display: none;
  }

  #banner .more {
    display: none;
  }
}

body.is-preload #banner h2 {
  -moz-transform: scale(0.95);
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
  opacity: 0;
}

body.is-preload #banner h2:before,
body.is-preload #banner h2:after {
  width: 0;
}

body.is-preload #banner .more {
  -moz-transform: translateY(8.5em);
  -webkit-transform: translateY(8.5em);
  -ms-transform: translateY(8.5em);
  transform: translateY(8.5em);
  opacity: 0;
}

body.is-preload #banner:after {
  opacity: 1;
}

/* CTA */

#cta .inner {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  max-width: 45em;
}

#cta .inner header {
  -moz-order: 1;
  -webkit-order: 1;
  -ms-order: 1;
  order: 1;
  padding-right: 3em;
  width: 70%;
}

#cta .inner header p {
  color: inherit;
}

#cta .inner .actions {
  -moz-order: 2;
  -webkit-order: 2;
  -ms-order: 2;
  order: 2;
  width: 30%;
}

@media screen and (max-width: 980px) {
  #cta .inner {
    display: block;
    text-align: center;
  }

  #cta .inner header {
    padding-right: 0;
    width: 100%;
  }

  #cta .inner .actions {
    margin-left: auto;
    margin-right: auto;
    max-width: 20em;
    width: 100%;
  }
}

@media screen and (max-width: 736px) {
  #cta .inner .actions {
    max-width: none;
  }
}
/* ... */

